[package]
name = "tracing-record-hierarchical"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Record parent `tracing::Span` fields from inside child `tracing::Span`'s context."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tracing-record-hierarchical"
homepage = "https://github.com/instrumentisto/tracing-record-hierarchical-rs"
repository = "https://github.com/instrumentisto/tracing-record-hierarchical-ts"
readme = "README.md"
#keywords = ["tracing", "span", "parent", "record", "subscriber"]
#categories = ["development-tools::debugging", "development-tools::profiling"]
include = ["/src/", "/Cargo.toml", "/CHANGELOG.md", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
sealed = "0.5"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Not realy used, for surviving MSRV check only.
lazy_static = "1.1"

[dev-dependencies]
tracing = { version = "0.1", features = ["attributes", "std"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["registry"], default-features = false }
